#89539: fixing another cosmetic bug in the download table: when we had "width: 100%", screenshot images could bleed into the table. plus, the more compact table looks better IMHO, anyway. ;)

--- a/release/project_release.css
+++ b/release/project_release.css
@@ -1,4 +1,4 @@
-/* $Id: project_release.css,v 1.1.2.3 2006/12/06 05:02:04 dww Exp $ */
+/* $Id: project_release.css,v 1.1.2.4 2006/12/07 08:21:41 dww Exp $ */
 /* $Name:  $ */
 
 .node-form .project-release .version-elements fieldset .form-item {
@@ -21,7 +21,6 @@
 * CSS for tables of releases
 */
 table.releases {
-  width: 100%;
   margin-top: .5em;
 }
 
